# simple-qt-app

./: README.md  check-bundle-refs.sh  check-nix-refs.sh  compile.sh  dmg.sh  fix-bundle.sh  flake.nix
app/: CMakeLists.txt  main.cpp
app/macos/: Info.plist.in
nix/: app.nix  macos-bundle.nix  macos-dmg.nix
